# HealthInsightReplacement

./: .gitmodules  schema_v1.sql
attempt_1/: Cargo.toml
attempt_1/shemav1/: Encounter.sql  Patient.sql
attempt_1/src/: main.rs
attempt_1/src/fhir_r4b_shemav1/: fhir_r4b_schemav1.rs
attempt_1/src/fhirr4b_shemav1/: fhirr4b_schemav1.rs  mod.rs  util.rs
attempt_1/src/schemav1/: mod.rs  patient.rs
ccda-parsing/: Cargo.toml
ccda-parsing/src/: ccda.rs  lib.rs  main.rs
ccda-parsing/tests/: test_ccda_parsing.rs
emulated_testing/: .gitignore  README.md  k8s_controller.DockerFile  setup1_compose.yaml
feeder/: .gitignore  Cargo.toml  README.md  clickhouse_compose.yaml  test_docker_env_1.yaml
feeder/src/: lib.rs  main.rs
feeder/src/fhir_r4b_shemav1/: fhir_r4b_schemav1.rs  mod.rs
feeder/src/schemav1/: db_ops.rs  encounter.rs  mod.rs  patient.rs
feeder/src/schemav1/sql/: make_patient.sql
feeder/tests/: ingest_bundle.rs  ingest_encounter.rs  ingest_patient.rs  utils.rs
feeder/tests/assets/: encounter_1.json
kubernetes/: Dockerfile.kafka  README.md  kafka.yaml  kind-cluster-config-1.yaml  shell.nix  zookeeper-pod.yaml  zookeeper-triplet.yaml
kubernetes/.direnv/: nix-profile-.1695.dd457de7e08c  nix-profile-.1695.dd457de7e08c.rc
kubernetes/config1/: clickhouse-gateway.yaml  clickhouse.yaml  volumes.yaml  zookeeper.yaml
nixcontainers/: README.md  configuration.nix  result
notes/: ParameterizingParsing.md
try_fhir_sdk/: Cargo.toml
try_fhir_sdk/src/: main.rs
