[package]
name = "feeder"
version = "0.1.0"
edition = "2024"

[dependencies]
clickhouse = { version = "0.13.2", features = ["inserter", "test-util", "time"] }
fhir-model = { version = "0.12.0", features = ["r4b", "builders"], default-features = false }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["sync"] }
openssl = { version = "0.10", features = ["vendored"] }
time = "0.3.41"
serde_repr = "0.1.20"
rdkafka = { version = "0.37.0", features = ["tokio"] }
ringbuffer = "0.15.0"
futures = "0.3.31"
